Fix: Transactions overlapping title/content issue.

--- a/src/components/Wallet/Transactions/Transactions.scss
+++ b/src/components/Wallet/Transactions/Transactions.scss
@@ -90,8 +90,6 @@
         .panel-heading {
             height: 75px;
             z-index: 47;
-            position: sticky;
-            top: -30px;
             display: flex;
             align-items: center;
             justify-content: space-between;
